--- a/mapf/CMakeLists.txt
+++ b/mapf/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.16)
 file(GLOB SRCS "./src/*.cpp")
 project(lib-mapf)
 add_library(lib-mapf STATIC ${SRCS})
-add_definitions(-D_MAPDIR_="${CMAKE_CURRENT_LIST_DIR}/../map/")
+#add_definitions(-D_MAPDIR_="${CMAKE_CURRENT_LIST_DIR}/../map/")
 if( CPU STREQUAL "M1" )
     message("Configuring grid-pathfinding for M1 Mac.")
     target_compile_options(lib-mapf PUBLIC -O3 -Wall -mtune=native -mcpu=apple-m1)
